update test for replica-group change. include RG / pool number in the test names to make test behaviour clearer